[gd_scene load_steps=4 format=3 uid="uid://ckwqy7nncbwke"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_tboqq"]
[ext_resource type="Script" path="res://levels/level_completer.gd" id="2_l236b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbjgk"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_tboqq")

[node name="MenuBody" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="Button" parent="MenuBody"]
layout_mode = 0
offset_left = 504.0
offset_top = 312.0
offset_right = 648.0
offset_bottom = 343.0
text = "Start"

[node name="Quit" type="Button" parent="MenuBody"]
layout_mode = 0
offset_left = 504.0
offset_top = 408.0
offset_right = 648.0
offset_bottom = 439.0
text = "Quit"

[node name="level_completer" type="Area2D" parent="."]
script = ExtResource("2_l236b")
scene_path = "res://levels/level1.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_completer"]
shape = SubResource("RectangleShape2D_xbjgk")

[node name="Options" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Fullscreen" type="CheckButton" parent="Options"]
layout_mode = 0
offset_left = 336.0
offset_top = 360.0
offset_right = 522.0
offset_bottom = 391.0
text = "Toggle Fullscreen "

[node name="Mute" type="CheckButton" parent="Options"]
layout_mode = 0
offset_left = 648.0
offset_top = 360.0
offset_right = 791.0
offset_bottom = 391.0
text = "Mute Game "

[connection signal="pressed" from="MenuBody/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuBody/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="Options/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="Options/Mute" to="." method="_on_mute_toggled"]
